# obs-text-slideshow

./: CMakeLists.txt
src/: obs-text-freetype2-slideshow.cpp  obs-text-slideshow.cpp  plugin-main.cpp
